--- a/nginx-https.conf
+++ b/nginx-https.conf
@@ -16,9 +16,9 @@ server {
     listen 443 ssl http2;
     server_name _;
     
-    # SSL Configuration
-    ssl_certificate /etc/letsencrypt/live/your-domain.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/your-domain.com/privkey.pem;
+    # SSL Configuration (self-signed for now)
+    ssl_certificate /etc/nginx/ssl/nginx.crt;
+    ssl_certificate_key /etc/nginx/ssl/nginx.key;
     
     # SSL Security Headers
     ssl_protocols TLSv1.2 TLSv1.3;
