Add loading state with animations and status updates

--- a/nginx-npmplus.conf
+++ b/nginx-npmplus.conf
@@ -1,12 +1,12 @@
 # Custom Nginx Configuration for DJ Calendar (NPMplus Integration)
 # Add this as custom configuration in NPMplus
 
-# Security headers
-add_header X-Frame-Options "SAMEORIGIN" always;
+# Security headers (allow iframe embedding)
+add_header X-Frame-Options "ALLOWALL" always;
 add_header X-Content-Type-Options "nosniff" always;
 add_header X-XSS-Protection "1; mode=block" always;
 add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' https://apis.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://www.googleapis.com;" always;
+add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' https://apis.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://www.googleapis.com; frame-ancestors 'self' https://djmarkuss.de https://www.djmarkuss.de;" always;
 
 # Gzip compression
 gzip on;
